feat: Implement float option custom widget